# diplomski

./: .gitignore  .gitmodules  Makefile  gdbinit.py  vimrc  vimrc.lua
cmake/: FindHAL.cmake  stm32_gcc.cmake
docs/: diplomski.bib  diplomski.cls  diplomski.tex  fer.cls  prezentacija.ppt  shitcode.c
src/: CMakeLists.txt  stm32l4xx_hal_conf.h  sys.c  syscalls.c
src/SensorTile/: SensorTile.c  SensorTile.h  SensorTile_BlueNRG.c  SensorTile_BlueNRG.h  SensorTile_accelero.c  SensorTile_accelero.h  SensorTile_audio_in.c  SensorTile_audio_in.h  SensorTile_gyro.c  SensorTile_gyro.h  SensorTile_humidity.c  SensorTile_humidity.h  SensorTile_magneto.c  SensorTile_magneto.h  SensorTile_pressure.c  SensorTile_pressure.h  SensorTile_sd.c  SensorTile_sd.h  SensorTile_temperature.c  SensorTile_temperature.h
src/app/: DemoSerial.c  DemoSerial.h  Serial_CMD.h  app_bluenrg_ms.c  app_bluenrg_ms.h  ble_serializer.cpp  ble_serializer.hpp  circ_buffer.hpp  cube_hal.h  cube_hal_l4.c  help.h  lsm6dsm.cpp  lsm6dsm.hpp  main.c  main.cpp  main.h  sample_service.c  sample_service.h  sensor_commands.c  sensor_commands.h  serial_protocol.c  serial_protocol.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_cdc_interface.c  usbd_cdc_interface.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h  vcom.c  vcom.h
src/bluenrg/: ble_list.c  ble_list.h  ble_list_utils.h  bluenrg_IFR.c  bluenrg_aci.h  bluenrg_aci_const.h  bluenrg_conf.h  bluenrg_def.h  bluenrg_gap.h  bluenrg_gap_aci.c  bluenrg_gap_aci.h  bluenrg_gatt_aci.c  bluenrg_gatt_aci.h  bluenrg_gatt_server.h  bluenrg_hal_aci.c  bluenrg_hal_aci.h  bluenrg_l2cap_aci.c  bluenrg_l2cap_aci.h  bluenrg_types.h  bluenrg_updater_aci.c  bluenrg_updater_aci.h  bluenrg_utils.h  bluenrg_utils_small.c  compiler.h  hci.h  hci_const.h  hci_le.c  hci_le.h  hci_tl.c  hci_tl.h  hci_tl_interface.c  hci_tl_interface.h  link_layer.h  sm.h
src/common_sensors/: accelerometer.h  component.h  gyroscope.h  humidity.h  magnetometer.h  pressure.h  sensor.h  temperature.h
src/hts221/: HTS221_Driver.c  HTS221_Driver.h  HTS221_Driver_HL.c  HTS221_Driver_HL.h
src/lps22hb/: LPS22HB_Driver.c  LPS22HB_Driver.h  LPS22HB_Driver_HL.c  LPS22HB_Driver_HL.h
src/lsm303agr/: LSM303AGR_ACC_driver.c  LSM303AGR_ACC_driver.h  LSM303AGR_ACC_driver_HL.c  LSM303AGR_ACC_driver_HL.h  LSM303AGR_Combo_driver_HL.h  LSM303AGR_MAG_driver.c  LSM303AGR_MAG_driver.h  LSM303AGR_MAG_driver_HL.c  LSM303AGR_MAG_driver_HL.h
src/lsm6dsm/: LSM6DSM_ACC_GYRO_driver.c  LSM6DSM_ACC_GYRO_driver.h  LSM6DSM_ACC_GYRO_driver_HL.c  LSM6DSM_ACC_GYRO_driver_HL.h
src/usb/: usbd_cdc.c  usbd_cdc.h  usbd_core.c  usbd_core.h  usbd_ctlreq.c  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.c  usbd_ioreq.h
test/: CMakeLists.txt  bluetooth_server.c  bluetooth_server.cpp
